accessible/html/HTMLLinkAccessible.cpp
@@ -121,7 +121,7 @@ bool HTMLLinkAccessible::IsLink() const {
 
 already_AddRefed<nsIURI> HTMLLinkAccessible::AnchorURIAt(
     uint32_t aAnchorIndex) const {
-  return aAnchorIndex == 0 ? mContent->GetHrefURI() : nullptr;
+  return aAnchorIndex == 0 ? mContent->AsElement()->GetHrefURI() : nullptr;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
