layout/generic/nsImageFrame.cpp
@@ -2403,7 +2403,6 @@ CSSIntPoint nsImageFrame::TranslateEventCoords(const nsPoint& aPoint) {
 
 bool nsImageFrame::GetAnchorHREFTargetAndNode(nsIURI** aHref, nsString& aTarget,
                                               nsIContent** aNode) {
-  bool status = false;
   aTarget.Truncate();
   *aHref = nullptr;
   *aNode = nullptr;
@@ -2411,23 +2410,21 @@ bool nsImageFrame::GetAnchorHREFTargetAndNode(nsIURI** aHref, nsString& aTarget,
   // Walk up the content tree, looking for an nsIDOMAnchorElement
   for (nsIContent* content = mContent->GetParent(); content;
        content = content->GetParent()) {
-    nsCOMPtr<dom::Link> link(do_QueryInterface(content));
-    if (link) {
-      nsCOMPtr<nsIURI> href = content->GetHrefURI();
-      if (href) {
-        href.forget(aHref);
-      }
-      status = (*aHref != nullptr);
-
-      RefPtr<HTMLAnchorElement> anchor = HTMLAnchorElement::FromNode(content);
-      if (anchor) {
-        anchor->GetTarget(aTarget);
-      }
-      NS_ADDREF(*aNode = content);
-      break;
+    nsCOMPtr<dom::Link> link = do_QueryInterface(content);
+    if (!link) {
+      continue;
     }
+    if (nsCOMPtr<nsIURI> href = link->GetURI()) {
+      href.forget(aHref);
+    }
+
+    if (auto* anchor = HTMLAnchorElement::FromNode(content)) {
+      anchor->GetTarget(aTarget);
+    }
+    NS_ADDREF(*aNode = content);
+    return *aHref != nullptr;
   }
-  return status;
+  return false;
 }
 
 bool nsImageFrame::IsLeafDynamic() const {
